# felt

./: install-deps.sh  install.sh  pyproject.toml  upgrade.sh
src/felt/: __init__.py
