[project]
name = "felt"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andy Pérez", email = "andy.perez.amado@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fabric",
    "psutil>=7.2.2",
]

[project.scripts]
felt = "felt:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric.git" }
